--- a/parksnap_front/src/components/AboutUsPage.css
+++ b/parksnap_front/src/components/AboutUsPage.css
@@ -1,36 +1,55 @@
-/* AboutUsPage.css */
-
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
-.about-us-page {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.about-header {
-  text-align: center;
-  margin: 20px 0;
-}
-
-.main-content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 20px;
-}
-
-.team-members {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-footer {
-  margin-top: auto;
-}
+.about-container {
+    background-color: #1d1d1d;
+    color: rgb(245, 243, 243);
+    text-align: center;
+    padding: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  .header h1 {
+    margin-top: 0;
+    padding-top: 20px;
+    font-size: 3rem;
+    color:#a9016d;
+    
+  }
+  .us{
+    color:aliceblue;
+    display:inline;
+       }
+  
+  .content p {
+    
+    padding: 20px;
+    margin: 10px auto;
+    width: 70%;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    text-align: justify;
+    line-height: 40px;
+    
+  }
+  
+  .team-button {
+    background-color: #a9016d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-inline: 350px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-top:25px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  
+  .team-photo {
+    margin: 20px auto;
+    max-width: 600px;
+    width: 100%;
+    height:auto;
+    border-radius: 10px;
+  }
+  
+  
