--- a/parksnap_front/src/components/Homepage.css
+++ b/parksnap_front/src/components/Homepage.css
@@ -1,3 +1,11 @@
+.nav {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #0a0520; 
+  color: white;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -15,7 +23,7 @@
   align-items: center;
 }
 
-.homepage h1{
+.homepage h1 {
   margin-bottom: 40px;
 }
 
@@ -44,6 +52,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center; /* Ensure buttons are centered */
   gap: 20px;
   margin-bottom: 50px;
 }
@@ -54,6 +63,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 1.2rem;
+  transition: background 0.3s ease;
 }
 
 .login-button {
@@ -66,11 +76,17 @@ button {
   color: white;
 }
 
+/* Hover effect for buttons */
+button:hover {
+  background: linear-gradient(90deg, #007bff, #0066ff); /* Slight blue effect */
+}
+
 footer {
   font-size: 0.9rem;
   margin-top: 50px;
 }
 
+/* Responsive styles for tablet view */
 @media (min-width: 768px) {
   .logo {
     max-width: 250px;
@@ -87,6 +103,8 @@ footer {
 
   .button-container {
     flex-direction: row;
+    justify-content: center;
+    align-items: center; /* Ensure buttons are centered */
     gap: 40px;
   }
 }
