--- a/parksnap_front/src/components/AboutUsPage.css
+++ b/parksnap_front/src/components/AboutUsPage.css
@@ -45,7 +45,7 @@
   
   
   .team-photo {
-    margin: 20px auto;
+    margin: 20px auto 50px;
     max-width: 600px;
     width: 100%;
     height:auto;
