--- a/parksnap_front/src/components/Dashboard.css
+++ b/parksnap_front/src/components/Dashboard.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: montserrat, Raleway, Arial, sans-serif;
   }
   
   h1, h2, p {
+    font-family: montserrat, Raleway, Arial, sans-serif;
     margin: 0;
     padding: 10px 0;
   }
@@ -19,7 +20,7 @@ body {
   }
   
   p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #e0e0e0;
   }
   
