--- a/parksnap_front/src/components/Weather.css
+++ b/parksnap_front/src/components/Weather.css
@@ -5,12 +5,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 400px; /* Increased max width for a larger card */
-    margin: 10px auto; /* Centers it horizontally */
-    position: absolute; /* Absolute positioning for centering */
-    top: 50%; /* Move to the center vertically */
-    left: 50%; /* Move to the center horizontally */
-    transform: translate(-50%, -50%); /* Adjusts the position to be centered */
+    
+}
+
+.App .weather{
+    padding: 10px;
+    float: right;
 }
 
 .cityname {
