Changed UserProfile,Separate SignUp Form
removed vehicle image

--- a/parksnap_front/src/components/ReservePage.css
+++ b/parksnap_front/src/components/ReservePage.css
@@ -1,6 +1,6 @@
 /* General styles for the reserve page */
 .reserve-container {
-  background: url('../assets/parking_lot.jpeg') no-repeat center center fixed;
+  background: url('../Assets/parking_lot.jpeg') no-repeat center center fixed;
   background-size: cover;
   min-height: 100vh;
   display: flex;
