--- a/parksnap_front/src/components/Homepage.css
+++ b/parksnap_front/src/components/Homepage.css
@@ -13,7 +13,6 @@
 }
 
 .homepage {
-  font-family: 'Arial', sans-serif;
   background-color: #0a0322;
   color: white;
   height: 100%;
@@ -57,8 +56,7 @@ h1 {
   margin-bottom: 50px;
 }
 
-button {
-  padding: 10px 20px;
+.homepage button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -77,7 +75,7 @@ button {
 }
 
 /* Hover effect for buttons */
-button:hover {
+.homepage button:hover {
   background: linear-gradient(90deg, #007bff, #0066ff); /* Slight blue effect */
 }
 
