--- a/parksnap_front/src/components/Pop.css
+++ b/parksnap_front/src/components/Pop.css
@@ -22,6 +22,10 @@
     box-sizing: border-box;
   }
   
+  .popup-content select{
+    margin-bottom: 20px;
+  }
+
   h3 {
     margin-bottom: 15px;
   }
@@ -32,6 +36,7 @@
   
   .form-group label {
     display: block;
+    margin-top: 20px;
     margin-bottom: 5px;
     font-size: 14px; /* Adjusted font size for labels */
   }
