--- a/parksnap_front/src/components/Slots.css
+++ b/parksnap_front/src/components/Slots.css
@@ -4,14 +4,16 @@
     background-color: #0A0322;
     padding: 20px;
     /* height: 100vh; */
-    overflow: auto; /* Allows scrolling if content overflows */
+    overflow: auto;
+    /* Allows scrolling if content overflows */
 }
 
 .App-header {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    flex-wrap: wrap; /* Wraps header content on smaller screens */
+    flex-wrap: wrap;
+    /* Wraps header content on smaller screens */
 }
 
 .slot-summary {
@@ -40,27 +42,34 @@
 }
 
 .lot {
-    
+
     background-color: #DCD7D7;
     color: #0A0322;
     padding: 20px;
     border-radius: 10px;
     width: 100%;
-    max-width: 1200px; /* Limit the max width of the lot */
+    max-width: 1200px;
+    /* Limit the max width of the lot */
     margin-bottom: 20px;
 }
-.mainslot{
+
+.mainslot {
     display: flex;
-    flex-direction: column; /* Stack the large and small slot containers vertically */
+    flex-direction: column;
+    /* Stack the large and small slot containers vertically */
     align-items: center;
     margin-bottom: 20px;
 }
+
 .slots {
     display: grid;
-    grid-template-columns: repeat(6, 1fr); /* 6 slots per row */
-    grid-gap: 20px; /* Adjust gap between slots */
+    grid-template-columns: repeat(6, 1fr);
+    /* 6 slots per row */
+    grid-gap: 20px;
+    /* Adjust gap between slots */
     margin-bottom: 20px;
 }
+
 .slot {
     background-color: #740182;
     border: none;
@@ -73,13 +82,27 @@
     width: 150px;
     height: 250px;
 }
-.slotssmall{
+
+.slot .license-plate {
+    font-size: 12px;
+}
+
+.slot .delete-button {
+    font-size: 10px;
+    padding: 5px;
+    width: auto;
+    margin-top: 0;
+}
+
+.slotssmall {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    grid-gap: 10px; /* Adjust gap between slots */
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    /* Adjust gap between slots */
     margin-top: -280px;
     margin-right: -510px;
 }
+
 .slotssmall .slot {
     background-color: #740182;
     border: none;
@@ -92,14 +115,17 @@
     width: 115px;
     height: 115px;
 }
-.slot.reserved{
+
+.slot.reserved {
     background-color: #0A0322;
     color: rgb(109, 109, 109);
 }
+
 .slot:hover {
     background-color: #c50080;
 }
-.slot.reserved:hover{
+
+.slot.reserved:hover {
     color: rgb(109, 109, 109);
     background-color: #0A0322;
     cursor: auto;
@@ -110,7 +136,8 @@
 .lot-buttons {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px; /* Space between buttons and slots */
+    margin-bottom: 20px;
+    /* Space between buttons and slots */
     gap: 10px;
 }
 
@@ -126,7 +153,8 @@
 }
 
 .lot-button.active {
-    background-color: #DCD7D7; /* Change color when active */
+    background-color: #DCD7D7;
+    /* Change color when active */
     color: #0A0322;
 }
 
@@ -134,35 +162,72 @@
 
 /* For medium screens like tablets */
 @media (max-width: 1080px) {
+    .slot .license-plate {
+        font-size: 10px;
+    }
+
+    .slot .delete-button {
+        font-size: 10px;
+        padding: 5px;
+        width: auto;
+        margin-top: 0;
+    }
+
     .slot-summary {
-        
+
         align-items: center;
     }
 
-
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 4 slots per row on medium screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 4 slots per row on medium screens */
         grid-gap: 15px;
     }
 
     .slot {
-        width: 135px; /* Slightly smaller slots */
+        font-size: 30px;
+        width: 135px;
+        /* Slightly smaller slots */
         height: 185px;
     }
-    .slotssmall{
- 
-        grid-gap: 9px; /* Adjust gap between slots */
-        margin-top: -200px;
+
+    .slotssmall {
+        grid-gap: 9px;
+        /* Adjust gap between slots */
+        margin-top: -215px;
         margin-right: -450px;
     }
-    .slotssmall .slot {
 
+    .slotssmall .slot {
+        font-size: 10px;
         width: 100px;
         height: 82px;
+        padding-top: 10px;
     }
 }
-@media (max-width: 950px) {
 
+@media (max-width: 950px) {
+    .slot .license-plate {
+        font-size: 8px;
+    }
+
+    .slot .delete-button {
+        font-size: 5px;
+        padding: 5px;
+        width: auto;
+        margin-top: 0;
+    }
+
+    .slot .license-plate {
+        font-size: 8px;
+    }
+
+    .slot .delete-button {
+        font-size: 5px;
+        padding: 5px;
+        width: auto;
+        margin-top: 0;
+    }
 
     .slot-summary {
         width: 200px;
@@ -171,12 +236,14 @@
 
 
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 3 slots per row on small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 3 slots per row on small screens */
         grid-gap: 15px;
     }
 
     .slot {
-        width: 110px; /* Smaller slots for mobile */
+        width: 110px;
+        /* Smaller slots for mobile */
         height: 150px;
         font-size: 25px;
     }
@@ -185,23 +252,37 @@
         font-size: 14px;
         padding: 8px 16px;
     }
-    .slotssmall{
- 
-        grid-gap: 9px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 9px;
+        /* Adjust gap between slots */
         margin-top: -168px;
         margin-right: -360px;
 
     }
-    .slotssmall .slot {
 
+    .slotssmall .slot {
+        font-size: 10px;
         width: 85px;
         height: 70px;
-        font-size: 18px;
         margin-top: -1px;
     }
 }
+
 /* For small screens like mobile */
 @media (max-width: 800px) {
+
+    .slot .license-plate {
+        font-size: 5px;
+    }
+
+    .slot .delete-button {
+        font-size: 5px;
+        padding: 5px;
+        width: auto;
+        margin-top: 5px;
+    }
 
 
     .slot-summary {
@@ -211,12 +292,14 @@
 
 
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 3 slots per row on small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 3 slots per row on small screens */
         grid-gap: 15px;
     }
 
     .slot {
-        width: 90px; /* Smaller slots for mobile */
+        width: 90px;
+        /* Smaller slots for mobile */
         height: 150px;
         font-size: 25px;
     }
@@ -225,34 +308,51 @@
         font-size: 14px;
         padding: 8px 16px;
     }
-    .slotssmall{
- 
-        grid-gap: 9px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 9px;
+        /* Adjust gap between slots */
         margin-top: -168px;
         margin-right: -310px;
 
     }
+
     .slotssmall .slot {
 
         width: 70px;
         height: 70px;
-        font-size: 18px;
+        font-size: 10px;
         margin-top: -1px;
     }
 }
+
 @media (max-width: 680px) {
+    .slot .license-plate {
+        font-size: 5px;
+    }
+
+    .slot .delete-button {
+        font-size: 5px;
+        padding: 5px;
+        width: auto;
+        margin-top: 0;
+    }
+
     .slot-summary {
         width: 200px;
         align-items: center;
     }
 
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 2 slots per row on very small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 2 slots per row on very small screens */
         grid-gap: 12px;
     }
 
     .slot {
-        width: 80px; /* Even smaller slots */
+        width: 80px;
+        /* Even smaller slots */
         height: 95px;
         font-size: 18px;
     }
@@ -261,17 +361,25 @@
         font-size: 12px;
         padding: 6px 12px;
     }
-    .slotssmall{
- 
-        grid-gap: 8px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 8px;
+        /* Adjust gap between slots */
         margin-top: -115px;
         margin-right: -270px;
     }
+
     .slotssmall .slot {
 
         width: 60px;
         height: 45px;
-        font-size: 12px;
+        font-size: 10px;
+        padding: 2px;
+    }
+
+    .slotssmall .slot.reserved .slot-number{
+        display: none;
     }
 }
 
@@ -282,12 +390,14 @@
     }
 
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 2 slots per row on very small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 2 slots per row on very small screens */
         grid-gap: 12px;
     }
 
     .slot {
-        width: 70px; /* Even smaller slots */
+        width: 70px;
+        /* Even smaller slots */
         height: 95px;
         font-size: 18px;
     }
@@ -296,12 +406,15 @@
         font-size: 12px;
         padding: 6px 12px;
     }
-    .slotssmall{
- 
-        grid-gap: 8px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 8px;
+        /* Adjust gap between slots */
         margin-top: -115px;
         margin-right: -250px;
     }
+
     .slotssmall .slot {
 
         width: 50px;
@@ -309,19 +422,23 @@
         font-size: 12px;
     }
 }
+
 @media (max-width: 550px) {
     .slot-summary {
         width: 150px;
         align-items: center;
         font-size: 15px;
     }
+
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 2 slots per row on very small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 2 slots per row on very small screens */
         grid-gap: 10px;
     }
 
     .slot {
-        width: 62px; /* Even smaller slots */
+        width: 62px;
+        /* Even smaller slots */
         height: 82px;
         font-size: 17px;
     }
@@ -330,12 +447,15 @@
         font-size: 12px;
         padding: 6px 12px;
     }
-    .slotssmall{
- 
-        grid-gap: 6px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 6px;
+        /* Adjust gap between slots */
         margin-top: -100px;
         margin-right: -220px;
     }
+
     .slotssmall .slot {
         font-size: 11px;
         width: 45px;
@@ -351,13 +471,16 @@
         align-items: center;
         font-size: 15px;
     }
+
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 2 slots per row on very small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 2 slots per row on very small screens */
         grid-gap: 8px;
     }
 
     .slot {
-        width: 50px; /* Even smaller slots */
+        width: 50px;
+        /* Even smaller slots */
         height: 65px;
         font-size: 16px;
     }
@@ -366,12 +489,15 @@
         font-size: 12px;
         padding: 6px 12px;
     }
-    .slotssmall{
- 
-        grid-gap: 6px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 6px;
+        /* Adjust gap between slots */
         margin-top: -85px;
         margin-right: -170px;
     }
+
     .slotssmall .slot {
         font-size: 10px;
         width: 35px;
@@ -379,19 +505,23 @@
         padding: 5px;
     }
 }
+
 @media (max-width: 400px) {
     .slot-summary {
         width: 150px;
         align-items: center;
         font-size: 15px;
     }
+
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 2 slots per row on very small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 2 slots per row on very small screens */
         grid-gap: 8px;
     }
 
     .slot {
-        width: 45px; /* Even smaller slots */
+        width: 45px;
+        /* Even smaller slots */
         height: 65px;
         font-size: 16px;
     }
@@ -400,12 +530,15 @@
         font-size: 12px;
         padding: 6px 12px;
     }
-    .slotssmall{
- 
-        grid-gap: 6px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 6px;
+        /* Adjust gap between slots */
         margin-top: -85px;
         margin-right: -170px;
     }
+
     .slotssmall .slot {
         font-size: 10px;
         width: 32px;
@@ -413,19 +546,23 @@
         padding: 5px;
     }
 }
+
 @media (max-width: 360px) {
     .slot-summary {
         width: 150px;
         align-items: center;
         font-size: 15px;
     }
+
     .slots {
-        grid-template-columns: repeat(6, 1fr); /* 2 slots per row on very small screens */
+        grid-template-columns: repeat(6, 1fr);
+        /* 2 slots per row on very small screens */
         grid-gap: 8px;
     }
 
     .slot {
-        width: 40px; /* Even smaller slots */
+        width: 40px;
+        /* Even smaller slots */
         height: 65px;
         font-size: 16px;
     }
@@ -434,12 +571,15 @@
         font-size: 12px;
         padding: 6px 12px;
     }
-    .slotssmall{
- 
-        grid-gap: 6px; /* Adjust gap between slots */
+
+    .slotssmall {
+
+        grid-gap: 6px;
+        /* Adjust gap between slots */
         margin-top: -85px;
         margin-right: -150px;
     }
+
     .slotssmall .slot {
         font-size: 10px;
         width: 30px;
