--- a/parksnap_front/src/components/Pop.css
+++ b/parksnap_front/src/components/Pop.css
@@ -12,8 +12,8 @@
   }
   
   .popup-content {
-    background: white;
-    padding: 20px;
+    background: #E1E0E5;
+    padding: 30px;
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -22,6 +22,15 @@
     box-sizing: border-box;
   }
   
+.popup-content .details{
+  font-size: 12px;
+}
+
+.popup-content .details p{
+  font-size: 12px;
+  padding: 5px;
+}
+
   .popup-content select{
     margin-bottom: 20px;
   }
